[package]
name = "sketch"
version = "0.0.1"
authors = ["Caleb Daniels <CJordanDaniels@gmail.com>"]
edition = "2018"

repository = "https://github.com/Metalith/sketch"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Vulkan rendering system"
license = "GPL-3.0-or-later"

[dependencies]
wind = { path = "../wind", version = "0.0.1" }